# wa-voice-call-recorder

./: README.md  project-report.txt  wh-hijack.js
agent-mcs/core/: CMakeLists.txt
agent-mcs/core/include/: wa-voip-recording.h
agent-mcs/core/src/: agent-mcs.c  wa-voip-recording.c
agent-mcs/magisk-module/: module.prop  service.sh
client/: client  client.c
